kubernetes/base/002-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summary-lens-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: summary-lens-service
  template:
    metadata:
      labels:
        app: summary-lens-service
    spec:
      containers:
      - name: summary-lens-service
        image: gravitate-registry.cr.de-fra.ionos.com/summary-lens-service:v0.12.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
status: {}
