kubernetes/base/001-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: summary-lens-service
  labels:
    name: summary-lens-service
spec:
  selector:
    app: summary-lens-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
