kubernetes/base/003-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: summary-lens-service
spec:
  hosts:
  - "*"
  gateways:
  - gh-gateway
  http:
  - match:
    - uri:
        prefix: /ai/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: summary-lens-service.default.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowMethods:
      - GET
      - POST
      - OPTIONS
      allowOrigins:
      - exact: "*"
      allowHeaders:
      - "content-type"
      - "Accept"
